Solara/parser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    MULTI_COMMENT
    SINGLE_COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION
Rule 2     create_global_fun -> <empty>
Rule 3     print_currentSymTab -> <empty>
Rule 4     VAR_BLOCK -> VARS COLON AA
Rule 5     AA -> VAR_DEFINITIONS AA
Rule 6     AA -> empty
Rule 7     VAR_DEFINITIONS -> TYPE store_type A TICK
Rule 8     store_type -> <empty>
Rule 9     A -> ID check_var_duplicates B D
Rule 10    check_var_duplicates -> <empty>
Rule 11    B -> EQUALS C assign_var_value
Rule 12    B -> empty
Rule 13    assign_var_value -> <empty>
Rule 14    C -> EXPRESSION
Rule 15    C -> LIST_EXP
Rule 16    D -> COMMA A
Rule 17    D -> empty
Rule 18    S_BLOCK -> L_BRACE F R_BRACE
Rule 19    F -> S_STATUTE F
Rule 20    F -> empty
Rule 21    S_STATUTE -> VAR_DEFINITIONS
Rule 22    S_STATUTE -> STATUTE
Rule 23    SOLUTION_DEF -> SOL S_TYPE store_type ID check_sol_duplicates L_PAREN PARAMS R_PAREN COLON S_BLOCK TICK print_currentSymTab
Rule 24    check_sol_duplicates -> <empty>
Rule 25    STATUTE -> CONDITION
Rule 26    STATUTE -> CYCLE
Rule 27    STATUTE -> ASSIGNATION
Rule 28    S_TYPE -> VOID
Rule 29    S_TYPE -> TYPE
Rule 30    TYPE -> INT
Rule 31    TYPE -> FLOAT
Rule 32    TYPE -> CHAR
Rule 33    TYPE -> STRING
Rule 34    TYPE -> BOOL
Rule 35    TYPE -> LIST
Rule 36    EXPRESSION -> EXP G
Rule 37    G -> H EXP process_possible_relop_operation
Rule 38    G -> empty
Rule 39    process_possible_relop_operation -> <empty>
Rule 40    H -> LESS_T
Rule 41    H -> GREATER_T
Rule 42    H -> GREATER_T_EQUALS
Rule 43    H -> LESS_T_EQUALS
Rule 44    H -> IS
Rule 45    H -> AND
Rule 46    H -> OR
Rule 47    H -> PERCENTAGE
Rule 48    EXP -> TERM process_possible_plus_minus_operation I
Rule 49    process_possible_plus_minus_operation -> <empty>
Rule 50    I -> J EXP
Rule 51    I -> empty
Rule 52    J -> PLUS
Rule 53    J -> MINUS
Rule 54    TERM -> FACTOR process_possible_multiply_divide_operation K
Rule 55    process_possible_multiply_divide_operation -> <empty>
Rule 56    K -> L TERM
Rule 57    K -> empty
Rule 58    L -> MULTIPLY
Rule 59    L -> DIVIDE
Rule 60    FACTOR -> L_PAREN push_false_bottom EXPRESSION R_PAREN pop_false_bottom
Rule 61    FACTOR -> M CON_VAR check_sign_type_correspondence
Rule 62    push_false_bottom -> <empty>
Rule 63    pop_false_bottom -> <empty>
Rule 64    check_sign_type_correspondence -> <empty>
Rule 65    M -> PLUS
Rule 66    M -> MINUS
Rule 67    M -> empty
Rule 68    CON_VAR -> ID_REF
Rule 69    CON_VAR -> CON_VAR_TERMINAL
Rule 70    CON_VAR -> SOLUTION_CALL
Rule 71    CON_VAR -> PREDEFINED_SOLS
Rule 72    CON_VAR_TERMINAL -> INT_CONT
Rule 73    CON_VAR_TERMINAL -> STRING_CONT
Rule 74    CON_VAR_TERMINAL -> CHAR_CONT
Rule 75    CON_VAR_TERMINAL -> FLOAT_CONT
Rule 76    CON_VAR_TERMINAL -> BOOL_CONT
Rule 77    NEGATION -> N EXPRESSION
Rule 78    N -> NOT
Rule 79    ID_REF -> ID check_var_existence get_var_type O
Rule 80    check_var_existence -> <empty>
Rule 81    get_var_type -> <empty>
Rule 82    O -> L_BRACK EXPRESSION check_int_type R_BRACK
Rule 83    O -> empty
Rule 84    check_int_type -> <empty>
Rule 85    LIST_EXP -> L_BRACK EXPRESSION P R_BRACK
Rule 86    P -> COMMA EXPRESSION P
Rule 87    P -> empty
Rule 88    ASSIGNATION -> ID_REF EQUALS append_equals EXPRESSION process_assignation_operation TICK
Rule 89    append_equals -> <empty>
Rule 90    process_assignation_operation -> <empty>
Rule 91    BLOCK -> L_BRACE Q R_BRACE
Rule 92    Q -> STATUTE Q
Rule 93    Q -> empty
Rule 94    S_ASSIGNATION -> ID_REF EQUALS append_equals EXPRESSION process_assignation_operation
Rule 95    WHILE -> WHILE_CYCLE append_jump EXPRESSION process_condition_operation COLON BLOCK end_while_operation_processing TICK
Rule 96    append_jump -> <empty>
Rule 97    end_while_operation_processing -> <empty>
Rule 98    FOR -> FOR_CYCLE S_ASSIGNATION TICK append_jump EXPRESSION process_for_condition_operation TICK S_ASSIGNATION process_for_assignation_operation COLON BLOCK end_for_operation_processing TICK
Rule 99    process_for_condition_operation -> <empty>
Rule 100   process_for_assignation_operation -> <empty>
Rule 101   end_for_operation_processing -> <empty>
Rule 102   CYCLE -> FOR
Rule 103   CYCLE -> WHILE
Rule 104   CONDITION -> IF append_false_bottom EXPRESSION process_condition_operation COLON BLOCK R TICK end_condition_operation_processing
Rule 105   end_condition_operation_processing -> <empty>
Rule 106   append_false_bottom -> <empty>
Rule 107   process_condition_operation -> <empty>
Rule 108   R -> S
Rule 109   R -> T
Rule 110   S -> ELIF process_elif_operation EXPRESSION process_condition_operation COLON BLOCK U
Rule 111   process_elif_operation -> <empty>
Rule 112   U -> S
Rule 113   U -> T
Rule 114   U -> empty
Rule 115   T -> ELSE process_else_operation COLON BLOCK end_else_operation_processing
Rule 116   process_else_operation -> <empty>
Rule 117   end_else_operation_processing -> <empty>
Rule 118   SOLUTION_CALL -> ID check_sol_existence L_PAREN V R_PAREN
Rule 119   check_sol_existence -> <empty>
Rule 120   V -> W X
Rule 121   W -> EXPRESSION
Rule 122   W -> NEGATION
Rule 123   X -> COMMA V
Rule 124   X -> empty
Rule 125   PARAMS -> TYPE store_type ID check_param_duplicates Y
Rule 126   check_param_duplicates -> <empty>
Rule 127   Y -> COMMA PARAMS
Rule 128   Y -> empty
Rule 129   SOL_DEFINITIONS -> Z
Rule 130   Z -> SOLUTION_DEF Z
Rule 131   Z -> empty
Rule 132   MAIN_DEFINITION -> INT store_type MAIN_R check_sol_duplicates L_PAREN R_PAREN COLON S_BLOCK TICK print_currentSymTab
Rule 133   DRAW_CIRCLE -> DRAW_CIRCLE_R L_PAREN EXPRESSION COMMA EXPRESSION COMMA EXPRESSION R_PAREN
Rule 134   DRAW_LINE -> DRAW_LINE_R L_PAREN EXPRESSION COMMA EXPRESSION COMMA EXPRESSION COMMA EXPRESSION R_PAREN
Rule 135   DRAW_RECTANGLE -> DRAW_RECTANGLE_R L_PAREN EXPRESSION COMMA EXPRESSION COMMA EXPRESSION R_PAREN
Rule 136   MOVE_UP -> MOVE_UP_R L_PAREN EXPRESSION R_PAREN
Rule 137   MOVE_RIGHT -> MOVE_RIGHT_R L_PAREN EXPRESSION R_PAREN
Rule 138   MOVE_DOWN -> MOVE_DOWN_R L_PAREN EXPRESSION R_PAREN
Rule 139   MOVE_LEFT -> MOVE_LEFT_R L_PAREN EXPRESSION R_PAREN
Rule 140   PRINT -> PRINT_R L_PAREN EXPRESSION R_PAREN
Rule 141   PREDEFINED_SOLS -> DRAW_LINE
Rule 142   PREDEFINED_SOLS -> DRAW_CIRCLE
Rule 143   PREDEFINED_SOLS -> DRAW_RECTANGLE
Rule 144   PREDEFINED_SOLS -> MOVE_UP
Rule 145   PREDEFINED_SOLS -> MOVE_RIGHT
Rule 146   PREDEFINED_SOLS -> MOVE_DOWN
Rule 147   PREDEFINED_SOLS -> MOVE_LEFT
Rule 148   PREDEFINED_SOLS -> PRINT
Rule 149   empty -> <empty>

Terminals, with rules where they appear

AND                  : 45
BOOL                 : 34
BOOL_CONT            : 76
CHAR                 : 32
CHAR_CONT            : 74
COLON                : 1 1 4 23 95 98 104 110 115 132
COMMA                : 16 86 123 127 133 133 134 134 134 135 135
DIVIDE               : 59
DRAW_CIRCLE_R        : 133
DRAW_LINE_R          : 134
DRAW_RECTANGLE_R     : 135
ELIF                 : 110
ELSE                 : 115
EQUALS               : 11 88 94
FLOAT                : 31
FLOAT_CONT           : 75
FOR_CYCLE            : 98
GREATER_T            : 41
GREATER_T_EQUALS     : 42
ID                   : 1 9 23 79 118 125
IF                   : 104
INT                  : 30 132
INT_CONT             : 72
IS                   : 44
LESS_T               : 40
LESS_T_EQUALS        : 43
LIST                 : 35
L_BRACE              : 18 91
L_BRACK              : 82 85
L_PAREN              : 23 60 118 132 133 134 135 136 137 138 139 140
MAIN_R               : 132
MINUS                : 53 66
MOVE_DOWN_R          : 138
MOVE_LEFT_R          : 139
MOVE_RIGHT_R         : 137
MOVE_UP_R            : 136
MULTIPLY             : 58
MULTI_COMMENT        : 
NOT                  : 78
OR                   : 46
PERCENTAGE           : 47
PLUS                 : 52 65
PRINT_R              : 140
PROGRAM              : 1
R_BRACE              : 18 91
R_BRACK              : 82 85
R_PAREN              : 23 60 118 132 133 134 135 136 137 138 139 140
SINGLE_COMMENT       : 
SOL                  : 23
SOLS                 : 1
STRING               : 33
STRING_CONT          : 73
TICK                 : 7 23 88 95 98 98 98 104 132
VARS                 : 4
VOID                 : 28
WHILE_CYCLE          : 95
error                : 

Nonterminals, with rules where they appear

A                    : 7 16
AA                   : 4 5
ASSIGNATION          : 27
B                    : 9
BLOCK                : 95 98 104 110 115
C                    : 11
CONDITION            : 25
CON_VAR              : 61
CON_VAR_TERMINAL     : 69
CYCLE                : 26
D                    : 9
DRAW_CIRCLE          : 142
DRAW_LINE            : 141
DRAW_RECTANGLE       : 143
EXP                  : 36 37 50
EXPRESSION           : 14 60 77 82 85 86 88 94 95 98 104 110 121 133 133 133 134 134 134 134 135 135 135 136 137 138 139 140
F                    : 18 19
FACTOR               : 54
FOR                  : 102
G                    : 36
H                    : 37
I                    : 48
ID_REF               : 68 88 94
J                    : 50
K                    : 54
L                    : 56
LIST_EXP             : 15
M                    : 61
MAIN_DEFINITION      : 1
MOVE_DOWN            : 146
MOVE_LEFT            : 147
MOVE_RIGHT           : 145
MOVE_UP              : 144
N                    : 77
NEGATION             : 122
O                    : 79
P                    : 85 86
PARAMS               : 23 127
PREDEFINED_SOLS      : 71
PRINT                : 148
Q                    : 91 92
R                    : 104
S                    : 108 112
SOLUTION_CALL        : 70
SOLUTION_DEF         : 130
SOL_DEFINITIONS      : 1
STATUTE              : 22 92
S_ASSIGNATION        : 98 98
S_BLOCK              : 23 132
S_STATUTE            : 19
S_TYPE               : 23
T                    : 109 113
TERM                 : 48 56
TYPE                 : 7 29 125
U                    : 110
V                    : 118 123
VAR_BLOCK            : 1
VAR_DEFINITIONS      : 5 21
W                    : 120
WHILE                : 103
X                    : 120
Y                    : 125
Z                    : 129 130
append_equals        : 88 94
append_false_bottom  : 104
append_jump          : 95 98
assign_var_value     : 11
check_int_type       : 82
check_param_duplicates : 125
check_sign_type_correspondence : 61
check_sol_duplicates : 23 132
check_sol_existence  : 118
check_var_duplicates : 9
check_var_existence  : 79
create_global_fun    : 1
empty                : 6 12 17 20 38 51 57 67 83 87 93 114 124 128 131
end_condition_operation_processing : 104
end_else_operation_processing : 115
end_for_operation_processing : 98
end_while_operation_processing : 95
get_var_type         : 79
pop_false_bottom     : 60
print_currentSymTab  : 1 23 132
process_assignation_operation : 88 94
process_condition_operation : 95 104 110
process_elif_operation : 110
process_else_operation : 115
process_for_assignation_operation : 98
process_for_condition_operation : 98
process_possible_multiply_divide_operation : 54
process_possible_plus_minus_operation : 48
process_possible_relop_operation : 37
program              : 0
push_false_bottom    : 60
store_type           : 7 23 125 132

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION
    (2) create_global_fun -> .

    COLON           reduce using rule 2 (create_global_fun -> .)

    create_global_fun              shift and go to state 4

state 4

    (1) program -> PROGRAM ID create_global_fun . COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION

    COLON           shift and go to state 5


state 5

    (1) program -> PROGRAM ID create_global_fun COLON . VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION
    (4) VAR_BLOCK -> . VARS COLON AA

    VARS            shift and go to state 6

    VAR_BLOCK                      shift and go to state 7

state 6

    (4) VAR_BLOCK -> VARS . COLON AA

    COLON           shift and go to state 8


state 7

    (1) program -> PROGRAM ID create_global_fun COLON VAR_BLOCK . print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION
    (3) print_currentSymTab -> .

    SOLS            reduce using rule 3 (print_currentSymTab -> .)

    print_currentSymTab            shift and go to state 9

state 8

    (4) VAR_BLOCK -> VARS COLON . AA
    (5) AA -> . VAR_DEFINITIONS AA
    (6) AA -> . empty
    (7) VAR_DEFINITIONS -> . TYPE store_type A TICK
    (149) empty -> .
    (30) TYPE -> . INT
    (31) TYPE -> . FLOAT
    (32) TYPE -> . CHAR
    (33) TYPE -> . STRING
    (34) TYPE -> . BOOL
    (35) TYPE -> . LIST

    SOLS            reduce using rule 149 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 16
    STRING          shift and go to state 11
    BOOL            shift and go to state 17
    LIST            shift and go to state 15

    AA                             shift and go to state 10
    VAR_DEFINITIONS                shift and go to state 12
    TYPE                           shift and go to state 18
    empty                          shift and go to state 19

state 9

    (1) program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab . SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION

    SOLS            shift and go to state 20


state 10

    (4) VAR_BLOCK -> VARS COLON AA .

    SOLS            reduce using rule 4 (VAR_BLOCK -> VARS COLON AA .)


state 11

    (33) TYPE -> STRING .

    ID              reduce using rule 33 (TYPE -> STRING .)


state 12

    (5) AA -> VAR_DEFINITIONS . AA
    (5) AA -> . VAR_DEFINITIONS AA
    (6) AA -> . empty
    (7) VAR_DEFINITIONS -> . TYPE store_type A TICK
    (149) empty -> .
    (30) TYPE -> . INT
    (31) TYPE -> . FLOAT
    (32) TYPE -> . CHAR
    (33) TYPE -> . STRING
    (34) TYPE -> . BOOL
    (35) TYPE -> . LIST

    SOLS            reduce using rule 149 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 16
    STRING          shift and go to state 11
    BOOL            shift and go to state 17
    LIST            shift and go to state 15

    AA                             shift and go to state 21
    VAR_DEFINITIONS                shift and go to state 12
    TYPE                           shift and go to state 18
    empty                          shift and go to state 19

state 13

    (30) TYPE -> INT .

    ID              reduce using rule 30 (TYPE -> INT .)


state 14

    (31) TYPE -> FLOAT .

    ID              reduce using rule 31 (TYPE -> FLOAT .)


state 15

    (35) TYPE -> LIST .

    ID              reduce using rule 35 (TYPE -> LIST .)


state 16

    (32) TYPE -> CHAR .

    ID              reduce using rule 32 (TYPE -> CHAR .)


state 17

    (34) TYPE -> BOOL .

    ID              reduce using rule 34 (TYPE -> BOOL .)


state 18

    (7) VAR_DEFINITIONS -> TYPE . store_type A TICK
    (8) store_type -> .

    ID              reduce using rule 8 (store_type -> .)

    store_type                     shift and go to state 22

state 19

    (6) AA -> empty .

    SOLS            reduce using rule 6 (AA -> empty .)


state 20

    (1) program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS . COLON SOL_DEFINITIONS MAIN_DEFINITION

    COLON           shift and go to state 23


state 21

    (5) AA -> VAR_DEFINITIONS AA .

    SOLS            reduce using rule 5 (AA -> VAR_DEFINITIONS AA .)


state 22

    (7) VAR_DEFINITIONS -> TYPE store_type . A TICK
    (9) A -> . ID check_var_duplicates B D

    ID              shift and go to state 25

    A                              shift and go to state 24

state 23

    (1) program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON . SOL_DEFINITIONS MAIN_DEFINITION
    (129) SOL_DEFINITIONS -> . Z
    (130) Z -> . SOLUTION_DEF Z
    (131) Z -> . empty
    (23) SOLUTION_DEF -> . SOL S_TYPE store_type ID check_sol_duplicates L_PAREN PARAMS R_PAREN COLON S_BLOCK TICK print_currentSymTab
    (149) empty -> .

    SOL             shift and go to state 27
    INT             reduce using rule 149 (empty -> .)

    SOLUTION_DEF                   shift and go to state 26
    SOL_DEFINITIONS                shift and go to state 28
    Z                              shift and go to state 29
    empty                          shift and go to state 30

state 24

    (7) VAR_DEFINITIONS -> TYPE store_type A . TICK

    TICK            shift and go to state 31


state 25

    (9) A -> ID . check_var_duplicates B D
    (10) check_var_duplicates -> .

    EQUALS          reduce using rule 10 (check_var_duplicates -> .)
    COMMA           reduce using rule 10 (check_var_duplicates -> .)
    TICK            reduce using rule 10 (check_var_duplicates -> .)

    check_var_duplicates           shift and go to state 32

state 26

    (130) Z -> SOLUTION_DEF . Z
    (130) Z -> . SOLUTION_DEF Z
    (131) Z -> . empty
    (23) SOLUTION_DEF -> . SOL S_TYPE store_type ID check_sol_duplicates L_PAREN PARAMS R_PAREN COLON S_BLOCK TICK print_currentSymTab
    (149) empty -> .

    SOL             shift and go to state 27
    INT             reduce using rule 149 (empty -> .)

    SOLUTION_DEF                   shift and go to state 26
    Z                              shift and go to state 33
    empty                          shift and go to state 30

state 27

    (23) SOLUTION_DEF -> SOL . S_TYPE store_type ID check_sol_duplicates L_PAREN PARAMS R_PAREN COLON S_BLOCK TICK print_currentSymTab
    (28) S_TYPE -> . VOID
    (29) S_TYPE -> . TYPE
    (30) TYPE -> . INT
    (31) TYPE -> . FLOAT
    (32) TYPE -> . CHAR
    (33) TYPE -> . STRING
    (34) TYPE -> . BOOL
    (35) TYPE -> . LIST

    VOID            shift and go to state 34
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 16
    STRING          shift and go to state 11
    BOOL            shift and go to state 17
    LIST            shift and go to state 15

    S_TYPE                         shift and go to state 35
    TYPE                           shift and go to state 36

state 28

    (1) program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS . MAIN_DEFINITION
    (132) MAIN_DEFINITION -> . INT store_type MAIN_R check_sol_duplicates L_PAREN R_PAREN COLON S_BLOCK TICK print_currentSymTab

    INT             shift and go to state 37

    MAIN_DEFINITION                shift and go to state 38

state 29

    (129) SOL_DEFINITIONS -> Z .

    INT             reduce using rule 129 (SOL_DEFINITIONS -> Z .)


state 30

    (131) Z -> empty .

    INT             reduce using rule 131 (Z -> empty .)


state 31

    (7) VAR_DEFINITIONS -> TYPE store_type A TICK .

    INT             reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    FLOAT           reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    CHAR            reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    STRING          reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    BOOL            reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    LIST            reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    SOLS            reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    IF              reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    FOR_CYCLE       reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    WHILE_CYCLE     reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    ID              reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)
    R_BRACE         reduce using rule 7 (VAR_DEFINITIONS -> TYPE store_type A TICK .)


state 32

    (9) A -> ID check_var_duplicates . B D
    (11) B -> . EQUALS C assign_var_value
    (12) B -> . empty
    (149) empty -> .

    EQUALS          shift and go to state 40
    COMMA           reduce using rule 149 (empty -> .)
    TICK            reduce using rule 149 (empty -> .)

    B                              shift and go to state 39
    empty                          shift and go to state 41

state 33

    (130) Z -> SOLUTION_DEF Z .

    INT             reduce using rule 130 (Z -> SOLUTION_DEF Z .)


state 34

    (28) S_TYPE -> VOID .

    ID              reduce using rule 28 (S_TYPE -> VOID .)


state 35

    (23) SOLUTION_DEF -> SOL S_TYPE . store_type ID check_sol_duplicates L_PAREN PARAMS R_PAREN COLON S_BLOCK TICK print_currentSymTab
    (8) store_type -> .

    ID              reduce using rule 8 (store_type -> .)

    store_type                     shift and go to state 42

state 36

    (29) S_TYPE -> TYPE .

    ID              reduce using rule 29 (S_TYPE -> TYPE .)


state 37

    (132) MAIN_DEFINITION -> INT . store_type MAIN_R check_sol_duplicates L_PAREN R_PAREN COLON S_BLOCK TICK print_currentSymTab
    (8) store_type -> .

    MAIN_R          reduce using rule 8 (store_type -> .)

    store_type                     shift and go to state 43

state 38

    (1) program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION .

    $end            reduce using rule 1 (program -> PROGRAM ID create_global_fun COLON VAR_BLOCK print_currentSymTab SOLS COLON SOL_DEFINITIONS MAIN_DEFINITION .)


state 39

    (9) A -> ID check_var_duplicates B . D
    (16) D -> . COMMA A
    (17) D -> . empty
    (149) empty -> .

    COMMA           shift and go to state 45
    TICK            reduce using rule 149 (empty -> .)

    D                              shift and go to state 44
    empty                          shift and go to state 46

state 40

    (11) B -> EQUALS . C assign_var_value
    (14) C -> . EXPRESSION
    (15) C -> . LIST_EXP
    (36) EXPRESSION -> . EXP G
    (85) LIST_EXP -> . L_BRACK EXPRESSION P R_BRACK
    (48) EXP -> . TERM process_possible_plus_minus_operation I
    (54) TERM -> . FACTOR process_possible_multiply_divide_operation K
    (60) FACTOR -> . L_PAREN push_false_bottom EXPRESSION R_PAREN pop_false_bottom
    (61) FACTOR -> . M CON_VAR check_sign_type_correspondence
    (65) M -> . PLUS
    (66) M -> . MINUS
    (67) M -> . empty
    (149) empty -> .

    L_BRACK         shift and go to state 57
    L_PAREN         shift and go to state 48
    PLUS            shift and go to state 52
    MINUS           shift and go to state 50
    ID              reduce using rule 149 (empty -> .)
    INT_CONT        reduce using rule 149 (empty -> .)
    STRING_CONT     reduce using rule 149 (empty -> .)
    CHAR_CONT       reduce using rule 149 (empty -> .)
    FLOAT_CONT      reduce using rule 149 (empty -> .)
    BOOL_CONT       reduce using rule 149 (empty -> .)
    DRAW_LINE_R     reduce using rule 149 (empty -> .)
    DRAW_CIRCLE_R   reduce using rule 149 (empty -> .)
    DRAW_RECTANGLE_R reduce using rule 149 (empty -> .)
    MOVE_UP_R       reduce using rule 149 (empty -> .)
    MOVE_RIGHT_R    reduce using rule 149 (empty -> .)
    MOVE_DOWN_R     reduce using rule 149 (empty -> .)
    MOVE_LEFT_R     reduce using rule 149 (empty -> .)
    PRINT_R         reduce using rule 149 (empty -> .)

    LIST_EXP                       shift and go to state 47
    C                              shift and go to state 55
    M                              shift and go to state 56
    TERM                           shift and go to state 51
    empty                          shift and go to state 54
    EXP                            shift and go to state 49
    FACTOR                         shift and go to state 58
    EXPRESSION                     shift and go to state 53

state 41

    (12) B -> empty .

    COMMA           reduce using rule 12 (B -> empty .)
    TICK            reduce using rule 12 (B -> empty .)


state 42

    (23) SOLUTION_DEF -> SOL S_TYPE store_type . ID check_sol_duplicates L_PAREN PARAMS R_PAREN COLON S_BLOCK TICK print_currentSymTab

    ID              shift and go to state 59


state 43

    (132) MAIN_DEFINITION -> INT store_type . MAIN_R check_sol_duplicates L_PAREN R_PAREN COLON S_BLOCK TICK print_currentSymTab

    MAIN_R          shift and go to state 60


state 44

    (9) A -> ID check_var_duplicates B D .

    TICK            reduce using rule 9 (A -> ID check_var_duplicates B D .)


state 45

    (16) D -> COMMA . A
    (9) A -> . ID check_var_duplicates B D

    ID              shift and go to state 25

    A                              shift and go to state 61

state 46

    (17) D -> empty .

    TICK            reduce using rule 17 (D -> empty .)


state 47

    (15) C -> LIST_EXP .

    COMMA           reduce using rule 15 (C -> LIST_EXP .)
    TICK            reduce using rule 15 (C -> LIST_EXP .)


state 48

    (60) FACTOR -> L_PAREN . push_false_bottom EXPRESSION R_PAREN pop_false_bottom
    (62) push_false_bottom -> .

    L_PAREN         reduce using rule 62 (push_false_bottom -> .)
    PLUS            reduce using rule 62 (push_false_bottom -> .)
    MINUS           reduce using rule 62 (push_false_bottom -> .)
    ID              reduce using rule 62 (push_false_bottom -> .)
    INT_CONT        reduce using rule 62 (push_false_bottom -> .)
    STRING_CONT     reduce using rule 62 (push_false_bottom -> .)
    CHAR_CONT       reduce using rule 62 (push_false_bottom -> .)
    FLOAT_CONT      reduce using rule 62 (push_false_bottom -> .)
    BOOL_CONT       reduce using rule 62 (push_false_bottom -> .)
    DRAW_LINE_R     reduce using rule 62 (push_false_bottom -> .)
    DRAW_CIRCLE_R   reduce using rule 62 (push_false_bottom -> .)
    DRAW_RECTANGLE_R reduce using rule 62 (push_false_bottom -> .)
    MOVE_UP_R       reduce using rule 62 (push_false_bottom -> .)
    MOVE_RIGHT_R    reduce using rule 62 (push_false_bottom -> .)
    MOVE_DOWN_R     reduce using rule 62 (push_false_bottom -> .)
    MOVE_LEFT_R     reduce using rule 62 (push_false_bottom -> .)
    PRINT_R         reduce using rule 62 (push_false_bottom -> .)

    push_false_bottom              shift and go to state 62

state 49

    (36) EXPRESSION -> EXP . G
    (37) G -> . H EXP process_possible_relop_operation
    (38) G -> . empty
    (40) H -> . LESS_T
    (41) H -> . GREATER_T
    (42) H -> . GREATER_T_EQUALS
    (43) H -> . LESS_T_EQUALS
    (44) H -> . IS
    (45) H -> . AND
    (46) H -> . OR
    (47) H -> . PERCENTAGE
    (149) empty -> .

    LESS_T          shift and go to state 68
    GREATER_T       shift and go to state 64
    GREATER_T_EQUALS shift and go to state 70
    LESS_T_EQUALS   shift and go to state 69
    IS              shift and go to state 67
    AND             shift and go to state 63
    OR              shift and go to state 72
    PERCENTAGE      shift and go to state 71
    COMMA           reduce using rule 149 (empty -> .)
    TICK            reduce using rule 149 (empty -> .)
    R_BRACK         reduce using rule 149 (empty -> .)
    R_PAREN         reduce using rule 149 (empty -> .)
    COLON           reduce using rule 149 (empty -> .)

    H                              shift and go to state 66
    empty                          shift and go to state 73
    G                              shift and go to state 65

state 50

    (66) M -> MINUS .

    ID              reduce using rule 66 (M -> MINUS .)
    INT_CONT        reduce using rule 66 (M -> MINUS .)
    STRING_CONT     reduce using rule 66 (M -> MINUS .)
    CHAR_CONT       reduce using rule 66 (M -> MINUS .)
    FLOAT_CONT      reduce using rule 66 (M -> MINUS .)
    BOOL_CONT       reduce using rule 66 (M -> MINUS .)
    DRAW_LINE_R     reduce using rule 66 (M -> MINUS .)
    DRAW_CIRCLE_R   reduce using rule 66 (M -> MINUS .)
    DRAW_RECTANGLE_R reduce using rule 66 (M -> MINUS .)
    MOVE_UP_R       reduce using rule 66 (M -> MINUS .)
    MOVE_RIGHT_R    reduce using rule 66 (M -> MINUS .)
    MOVE_DOWN_R     reduce using rule 66 (M -> MINUS .)
    MOVE_LEFT_R     reduce using rule 66 (M -> MINUS .)
    PRINT_R         reduce using rule 66 (M -> MINUS .)


state 51

    (48) EXP -> TERM . process_possible_plus_minus_operation I
    (49) process_possible_plus_minus_operation -> .

    PLUS            reduce using rule 49 (process_possible_plus_minus_operation -> .)
    MINUS           reduce using rule 49 (process_possible_plus_minus_operation -> .)
    LESS_T          reduce using rule 49 (process_possible_plus_minus_operation -> .)
    GREATER_T       reduce using rule 49 (process_possible_plus_minus_operation -> .)
    GREATER_T_EQUALS reduce using rule 49 (process_possible_plus_minus_operation -> .)
    LESS_T_EQUALS   reduce using rule 49 (process_possible_plus_minus_operation -> .)
    IS              reduce using rule 49 (process_possible_plus_minus_operation -> .)
    AND             reduce using rule 49 (process_possible_plus_minus_operation -> .)
    OR              reduce using rule 49 (process_possible_plus_minus_operation -> .)
    PERCENTAGE      reduce using rule 49 (process_possible_plus_minus_operation -> .)
    COMMA           reduce using rule 49 (process_possible_plus_minus_operation -> .)
    TICK            reduce using rule 49 (process_possible_plus_minus_operation -> .)
    R_BRACK         reduce using rule 49 (process_possible_plus_minus_operation -> .)
    R_PAREN         reduce using rule 49 (process_possible_plus_minus_operation -> .)
    COLON           reduce using rule 49 (process_possible_plus_minus_operation -> .)

    process_possible_plus_minus_operation shift and go to state 74

state 52

    (65) M -> PLUS .
